# Hantei

./: .gitignore  Cargo.toml  README.md  benchmark_inputs.txt  flamegraph.sh  generate.bat  generate.sh  opt.md  pyproject.toml  python_api.md  run.bat  run.sh
.cargo/: config.toml
.github/workflows/: realase-and-doc.yml
data/: flow.json  flow_mtdg.json  flow_siag.json  qualities.json  sample_data.json  sample_data_2.json
src/: ast.rs  backend.rs  compiler.rs  error.rs  evaluator.rs  lib.rs  main.rs  prelude.rs  python.rs
src/ast/: expression.rs  mod.rs  trace.rs  value.rs
src/bytecode/: compiler.rs  mod.rs  opcode.rs  visualizer.rs  vm.rs
src/compiler/: builder.rs  mod.rs  optimizer.rs  parsing.rs
src/data/: model.rs  sample.rs
src/evaluator/: dynamic.rs  engine.rs  mod.rs
src/interpreter/: dynamic.rs  engine.rs  mod.rs
src/recipe/: artifact.rs  conversion.rs  definition.rs  mod.rs  quality.rs
src/trace/: formatter.rs
src/ui/: types.rs
tests/: bytecode.rs  common.rs  compiler.rs  evaluator.rs  integration.rs  unit.rs
tools/: README.md  visualizer.html
tools/data-generator/: main.rs
tools/hantei-cli/: main.rs
