[package]
name = "hantei"
version = "0.1.2"
authors = ["LuMiSxh"]
edition = "2024"
license = "MIT"
description = "A high-performance recipe compilation and evaluation engine for node-based decision trees"
repository = "https://github.com/lumisxh/hantei"
homepage = "https://github.com/lumisxh/hantei"
documentation = "https://lumisxh.github.io/Hantei/"
readme = "README.md"
keywords = ["compiler", "ast", "evaluation", "decision-tree", "recipe"]

categories = ["algorithms", "compilers", "data-structures"]

[lib]
name = "hantei"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "hantei-cli"
path = "tools/hantei-cli/main.rs"
required-features = ["hantei-cli"]

[[bin]]
name = "data-gen"
path = "tools/data-generator/main.rs"
required-features = ["data-gen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = { version = "0.8", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
rayon = "1.11"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

hantei-cli = ["dep:clap"]
data-gen = ["dep:rand", "dep:clap"]
python-bindings = ["dep:pyo3"]
